--- a/DonorAppVersion2/Web.config
+++ b/DonorAppVersion2/Web.config
@@ -10,50 +10,40 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 
-  <!-- PayPal SDK settings -->
-  <paypal>
-    <settings>
-      <add name="mode" value="sandbox"/>
-      <add name="connectionTimeout" value="360000"/>
-      <add name="requestRetries" value="1"/>
-      <add name="clientId" value="your client ID of paypal account"/>
-      <add name="clientSecret" value="your client secret key of paypal account"/>
-    </settings>
-  </paypal>
-  
-  
-  <!-- log4net settings 
-  <log4net>
-    <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="my_app.log"/>
-      <appendToFile value="true"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date
-      [%thread] %-5level %logger [%property{NDC}] %message%newline"/>
-      </layout>
-    </appender>
-    <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="FileAppender"/>
-    </root>
-  </log4net>-->
-
-  
-
-
   <appSettings>
-    <add key="PayPalLogger" value="PayPal.Log.Log4netLogger"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Business" value="Donor 21" />
+    <add key="IsSandbox" value="true" />
+    <add key="currency_code" value="USD" />
+    <add key="return" value="http://localhost:59662/PayPal/RedirectFromPaypal" />
+    <add key="cancel_return" value="http://localhost:59662/PayPal/CancelFromPaypal" />
+    <add key="notify_url" value="http://localhost:59662/PayPal/NotifyFromPaypal" />
+    <add key="test_url" value="https://www.sandbox.paypal.com/webscr" />
+    <add key="Prod_url" value="https://www.sandbox.paypal.com/webscr" />
   </appSettings>
   
   
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5"  optimizeCompilations="false" />
     <httpRuntime targetFramework="4.5" />
     <!--<trust level="High" /> -->
+
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Optimization" />
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
+      </namespaces>
+    </pages>
+    
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -75,7 +65,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -83,7 +73,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
