--- a/DonorAppVersion2/DonorAppVersion2.csproj
+++ b/DonorAppVersion2/DonorAppVersion2.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime">
+      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -65,6 +69,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Optimization">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -72,6 +79,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="WebGrease">
+      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
@@ -166,13 +176,17 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DonorController.cs" />
     <Compile Include="Controllers\ParentController.cs" />
     <Compile Include="Controllers\PartnerController.cs" />
+    <Compile Include="Controllers\PayPalController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -204,6 +218,7 @@
     <Compile Include="Models\DonorCycle.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DonorCycleAndUpdates.cs" />
     <Compile Include="Models\DonorCycleUpdate.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
@@ -213,6 +228,7 @@
     <Compile Include="Models\DonorHealthQuestionsAnswered.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DonorLoginViewModel.cs" />
     <Compile Include="Models\DonorsRegisteredWithPartner.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
@@ -250,6 +266,7 @@
     <Compile Include="Models\ParentFamilyTreeDiseaseDetail.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ParentMatchRequestViewModel.cs" />
     <Compile Include="Models\ParentsHealthQuestionsAnswered.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
@@ -271,6 +288,7 @@
     <Compile Include="Models\PaymentSummuryParent.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PayPalModel.cs" />
     <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
@@ -323,6 +341,12 @@
     <Content Include="Views\Shared\_partnerLayout.cshtml" />
     <Content Include="Views\Partner\Login.cshtml" />
     <Content Include="Views\Parent\AddClinic.cshtml" />
+    <Content Include="Views\Parent\RequestMatch.cshtml" />
+    <Content Include="Views\Parent\NewRequest.cshtml" />
+    <Content Include="Views\Parent\PayRegistrationFees.cshtml" />
+    <Content Include="Views\PayPal\RedirectFromPaypal.cshtml" />
+    <Content Include="Views\Parent\ViewDonorCycle.cshtml" />
+    <Content Include="Views\Donor\SubmitUpdate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
