--- a/DonorAppVersion2/DonorAppVersion2.csproj
+++ b/DonorAppVersion2/DonorAppVersion2.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Models\DonorsRegisteredWithPartner.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DonorVerificationViewModel.cs" />
     <Compile Include="Models\FamilyDiseaseQuestion.cs">
       <DependentUpon>AllDataModel.tt</DependentUpon>
     </Compile>
