--- a/DonorAppVersion2/Web.config
+++ b/DonorAppVersion2/Web.config
@@ -9,7 +9,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -24,13 +23,10 @@
     <add key="test_url" value="https://www.sandbox.paypal.com/webscr" />
     <add key="Prod_url" value="https://www.sandbox.paypal.com/webscr" />
   </appSettings>
-  
-  
   <system.web>
-    <compilation debug="true" targetFramework="4.5"  optimizeCompilations="false" />
+    <compilation debug="true" targetFramework="4.5" optimizeCompilations="false" />
     <httpRuntime targetFramework="4.5" />
     <!--<trust level="High" /> -->
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -42,8 +38,6 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    
-    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -90,7 +84,10 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="sampleEntities" connectionString="metadata=res://*/Models.AllDataModel.csdl|res://*/Models.AllDataModel.ssdl|res://*/Models.AllDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=sample;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="sampleEntities" 
+         connectionString="server=.;database=NewDonorDb;Integrated Security=True;Pooling=False;;MultipleActiveResultSets=True;Application Name=EntityFramework" 
+         providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -100,6 +97,7 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      
     </providers>
   </entityFramework>
 </configuration>
